# meri

./: .example.env  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  cron.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml
.devcontainer/: cspell.config.yaml  devcontainer.json  docker-compose.yaml
notebooks/: ampparit_popular.ipynb  headline_stability_with_quorum.ipynb  iltalehti_delay_estimator.ipynb  test_article.ipynb  text_summarization.ipynb  trafilatura.ipynb  wikipedia_edit_evaluation.ipynb  wp.ipynb
src/meri/: __init__.py  __main__.py  abc.py  article.py  ds.py  exceptions.py  lautta.py  llm.py  pydantic_llm.py  rahti.py  scraper.py  settings.py  suola.py  utils.py  worker.py  wp.py
src/meri/discovery/: __init__.py  _base.py  _registry.py  _utils.py  iltalehti.py  kontio.py  links.py  rss.py  sitemap.py
src/meri/extractor/: __init__.py  __main__.py  _common.py  _extractors.py  _iltapulu.py  _paywalled.py  _processors.py  _train.py  aksa_fi.py  generic.py  iltalehti.py  iltasanomat.py  kontio.py  mtvuutiset.py  tivi.py  yle.py
src/meri/extractor/kontio/: client.py  kontio.py  parser.py  types.py
src/meri/pipelines/: common.py  interest_groups.py  predict_article_type.py  summation.py  title.py
src/meri/prompts/: artcile_title_inst.md.j2  article.md.j2  article_updated.md.j2  news_article_type.md.j2  output_format_json.md.j2  summary_inst.md.j2  vested_groups_inst.md.j2
src/meri/settings/: __init__.py  __main__.py  const.py  llms.py  newssources.py  rahti.py  sentry.py  settings.py
src/valas/: __init__.py
