[project]
name = "meri"
version = "0.1.0"
description = "Meri 🌊 – Klikkikuri backend service for news title unsensationalizer"
authors = [
	{name="Teemu Autto", email="klikkikuri@teemu.rautakuu.org"},
	{name="Juho Tarkkanen", email="juho.tarkkanen@hotmail.fi"},
	{name="Taija Kolehmainen", email="taija.s.kolehmainen@jyu.fi"}
]
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE.txt"]
dependencies = [
    "click>=8.1.8",
    "haystack-ai>=2.9.0",
    "langdetect>=1.0.9",
    "lxml[html-clean]>=5.3.0",
    "markdownify>=0.14.1",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "opentelemetry-sdk>=1.29.0",
    "platformdirs>=4.3.6",
    "pycurl>=7.45.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "pydantic-yaml>=1.4.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "rich>=13.9.4",
    "structlog>=25.1.0",
    "trafilatura>=2.0.0",
    "url-normalize>=1.4.3",
    "zstandard>=0.23.0",
]
requires-python = ">=3.12"

[project.urls]
homepage = "https://github.com/Klikkikuri"
source = "https://github.com/Klikkikuri/meri"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
ignore = ["E701"]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "ruff>=0.9.2",
    "bandit>=1.8.2",
    "debugpy>=1.8.12",
    "isort>=5.13.2",
    "requests-cache>=1.2.1",
    "autopep8>=2.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "rich>=13.9.4",
    "rich-click>=1.8.8",
    "pre-commit>=4.2.0",
    "ollama-haystack>=2.4.1",
]
[tool.uv.sources]
#suola = { workspace = true }
#karikko = { workspace = true }
#meri = { path = "./src/meri" }

[tool.uv.workspace]
members = ["src/*"]
# Exclude self from workspace
exclude = ["src/meri"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
